--- a/index.html
+++ b/index.html
@@ -5,14 +5,64 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
 <body>
     <div id="app">
-        
+        <div class="container">
+            <div class="contacts-container">
+                <div class="user-profile">
+                    <div class="user">
+                        <img :src="user.avatar" alt="">
+                        <div class="username">{{user.name}}</div>
+                    </div>
+                    <div class="user-icons">
+                        <i class="fa-solid fa-arrows-rotate"></i>
+                        <i class="fa-solid fa-message"></i>
+                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                    </div>
+                </div>
+                <div class="notifications">
+                    <div class="notification">
+                        <i class="fa-solid fa-bell-slash"></i>
+                    </div>
+                    <div>
+                        <div>Ricevi notifiche di nuovi messaggi</div>
+                        <div style="color: grey; text-decoration: underline; font-size: 14px; margin-top: .5em;">Attiva notifiche desktop</div>
+                    </div>
+                </div>
+                <div class="search">
+                    <div><i class="fa-solid fa-magnifying-glass"></i></div>
+                    <input class="search-bar" type="text" placeholder="Cerca o inizia una nuova chat...">
+                </div>
+                <div v-for="(contact, i) in contacts" class="contact-card">
+                    <img :src="contact.avatar" alt="">
+                    <div class="text">
+                        <div class="contact-name">{{contact.name}}</div>
+                        <div style="color: grey; font-size: 14px;">{{contact.messages[contact.messages.length - 1].message}}...</div>
+                    </div>
+                    <div class="date">{{contact.messages[contact.messages.length - 1].date}}</div>
+                </div>
+            </div>
+            <div class="chat">
+                <!-- <div class="user-profile">
+                    <div class="user">
+                        <img :src="user.avatar" alt="">
+                        <div class="username">{{user.name}}</div>
+                    </div>
+                    <div class="user-icons">
+                        <i class="fa-solid fa-arrows-rotate"></i>
+                        <i class="fa-solid fa-message"></i>
+                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                    </div>
+                </div> -->
+            </div>
+        </div>
     </div>
 
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="script.js"></script>
 </body>
