layout part, done

--- a/index.html
+++ b/index.html
@@ -47,17 +47,26 @@
                 </div>
             </div>
             <div class="chat">
-                <!-- <div class="user-profile">
+                <div class="actual-user">
                     <div class="user">
                         <img :src="user.avatar" alt="">
                         <div class="username">{{user.name}}</div>
                     </div>
                     <div class="user-icons">
-                        <i class="fa-solid fa-arrows-rotate"></i>
-                        <i class="fa-solid fa-message"></i>
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                        <i class="fa-solid fa-paperclip"></i> 
                         <i class="fa-solid fa-ellipsis-vertical"></i>
                     </div>
-                </div> -->
+                </div>
+                <div class="message-container-right">
+                    <div class="message">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga tenetur laudantium distinctio libero.</div>
+                </div>
+                <div class="message-container-right">
+                    <div class="message">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga tenetur laudantium distinctio libero.</div>
+                </div>
+                <div class="message-container-left">
+                    <div class="message">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga tenetur laudantium distinctio libero.</div>
+                </div>
             </div>
         </div>
     </div>
