--- a/index.html
+++ b/index.html
@@ -71,37 +71,19 @@
                     </div>
                 </div>
                 <div class="chat-scroll">
-                    <div  class="message-container-right" alt="">
+                    <div  class="message-sent" alt="">
                         <div class="message user" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga tenetur laudantium distinctio libero.
                             <div class="down"><i class="fa-solid fa-sort-down"></i></div>
                             <div class="message-date">11:11</div>
                         </div>
                     </div>
-                    <div  class="message-container-right" alt="">
+                    <div  class="message-sent" alt="">
                         <div class="message user" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga tenetur laudantium distinctio libero.
                             <div class="down"><i class="fa-solid fa-sort-down"></i></div>
                             <div class="message-date">11:11</div>
                         </div>
                     </div>
-                    <div class="message-container-right">
-                        <div class="message user">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga tenetur laudantium distinctio libero.
-                            <div class="down"><i class="fa-solid fa-sort-down"></i></div>
-                            <div class="message-date">11:11</div>
-                        </div>
-                    </div>
-                    <div class="message-container-left">
-                        <div class="message">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga tenetur laudantium distinctio libero.
-                            <div class="down"><i class="fa-solid fa-sort-down"></i></div>
-                            <div class="message-date">11:11</div>
-                        </div>
-                    </div>
-                    <div class="message-container-left">
-                        <div class="message">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga tenetur laudantium distinctio libero.
-                            <div class="down"><i class="fa-solid fa-sort-down"></i></div>
-                            <div class="message-date">11:11</div>
-                        </div>
-                    </div>
-                    <div class="message-container-left">
+                    <div class="message-received">
                         <div class="message">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga tenetur laudantium distinctio libero.
                             <div class="down"><i class="fa-solid fa-sort-down"></i></div>
                             <div class="message-date">11:11</div>
