--- a/index.html
+++ b/index.html
@@ -72,12 +72,11 @@
                 </div>
                 <div class="chat-scroll">
                     <div v-for="message in contacts[activeIndex].messages" class="message-sent" alt="">
-                        <div  class="message user" >{{ message.message }} 
+                        <div  class="message">{{ message.message }} 
                             <div class="down"><i class="fa-solid fa-sort-down"></i></div>
-                            <div class="message-date">11:11</div>
+                        <div class="message-date">{{message.date}} </div>
                         </div>
                     </div>
-                    
                 </div>
                 <div class="type-message">
                     <i class="fa-regular fa-face-smile"></i>
