--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </div>
                 <div class="type-message">
                     <i class="fa-regular fa-face-smile"></i>
-                    <input class="type-bar" type="text" placeholder="Scrivi un nuovo messaggio...">
+                    <input class="type-bar" type="text" placeholder="Scrivi un nuovo messaggio..." v-model="newMexSent.message" @keyup.enter="addMex()">
                     <i class="fa-solid fa-microphone"></i>
                 </div>
             </div>
