--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
                 </div>
                 <div class="chat-scroll">
                     <div v-for="message in contacts[activeIndex].messages" class="message-sent" alt="">
-                        <div  class="message">{{ message.message }} 
-                            <div class="down"><i class="fa-solid fa-sort-down"></i></div>
+                        <div class="message">
+                            <span class="down"><i class="fa-solid fa-sort-down"></i></span>
+                            <span class="text-message">{{ message.message }} </span>
                         <div class="message-date">{{message.date}} </div>
                         </div>
                     </div>
