--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/luxon@3.3.0/build/global/luxon.min.js"></script>
     <script src="script.js" defer></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer">
+    <style>[v-cloak]{display: none;}
+    </style>
 </head>
 <body>
-    <div id="app">
+    <div id="app" v-cloak>
         <div class="container">
 
             <!-- START CONTACT LIST + USER-PROFILE -->
@@ -40,10 +43,10 @@
                 </div>
                 <div class="search">
                     <i class="fa-solid fa-magnifying-glass"></i>
-                    <input class="search-bar" type="text" placeholder="Cerca o inizia una nuova chat...">
+                    <input v-model="searchText"   class="search-bar" type="text" placeholder="Cerca o inizia una nuova chat...">
                 </div>
                 <div class="contacts">
-                    <div v-for="(contact, index) in contacts" class="contact-card" @click="showChat(index)">
+                    <div v-for="(contact, index) in filterContact" class="contact-card" @click="showChat(index)">
                         <img :src="contact.avatar" alt="">
                         <div class="text-contact">
                             <div class="contact-name">{{contact.name}}</div>
@@ -71,23 +74,29 @@
                     </div>
                 </div>
                 <div class="chat-scroll">
-                    <div v-for="message in contacts[activeIndex].messages" class="sent" :class="message.status" alt="">
-                        <div class="message">
-                            <span class="down"><i class="fa-solid fa-sort-down"></i></span>
+                    <div v-for="(message, i) in contacts[activeIndex].messages"  :class="message.status" alt="">
+                        <div >
+                            <div class="dropdown">
+                                <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                </button>
+                                <ul class="dropdown-menu">
+                                    <li><a @click="removeMex(i)" class="dropdown-item" href="#">Elimina messaggio</a></li>
+                                    <li><a class="dropdown-item" href="#">Info Messaggio: {{message.status}} </a></li>
+                                </ul>
+                            </div>
                             <span class="text-message"><p>{{ message.message }}</p></span>
-                        <div class="message-date">{{message.date}} </div>
+                        <div class="message-date">{{(message.date)}} </div>
                         </div>
                     </div>
                 </div>
                 <div class="type-message">
                     <i class="fa-regular fa-face-smile"></i>
-                    <input class="type-bar" type="text" placeholder="Scrivi un nuovo messaggio..." v-model="newMexSent.message" @keyup.enter="addMex(activeIndex)">
+                    <input class="type-bar" type="text" placeholder="Scrivi un nuovo messaggio..." v-model="newMexSent.message" @keyup.enter="addMex()">
                     <i class="fa-solid fa-microphone"></i>
                 </div>
             </div>
         </div>
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
