--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                         <img :src="contact.avatar" alt="">
                         <div class="text-contact">
                             <div class="contact-name">{{contact.name}}</div>
-                            <div class="last-text" style="color: grey; font-size: 14px;">{{contact.messages[contact.messages.length - 1].message}}</div>
+                            <div v-if="contact.messages.length" class="last-text" style="color: grey; font-size: 14px;">{{contact.messages[contact.messages.length - 1].message}}</div>
                         </div>
-                        <div class="date">{{contact.messages[contact.messages.length - 1].date.slice(0,11)}}</div>
+                        <div v-if="contact.messages.length" class="date">{{contact.messages[contact.messages.length - 1].date.slice(0,11)}}</div>
                     </div>
                 </div>
                 
@@ -77,7 +77,7 @@
                     </div>
                 </div>
                 <div class="chat-scroll">
-                    <div :key="visible" v-for="(message, i) in filterContact[activeIndex].messages"  :class="message.status" alt="">
+                    <div  v-for="(message, i) in contacts[activeIndex].messages"  :class="message.status" alt="">
                         <div >
                             <div class="dropdown">
                                 <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
